--- a/user-sign-up-signin-page.html
+++ b/user-sign-up-signin-page.html
@@ -16,6 +16,7 @@
 		</form class="login-form">
 
 		<form>
+			<center><font color='#4CAF50'><h2>My Diary<h2></font></center>
 			<input type="text" placeholder="username" name="username" />
 			<input type="password" placeholder="password" name="password" />
 			<button onclick="check(this.form)">Log in</button>
