Modified login page

--- a/create-main-page.html
+++ b/create-main-page.html
@@ -36,8 +36,8 @@
 			<font color="#4CAF50">Entry :</font><input type="text"  name="entry" maxlength=200 id="entry" autofocus>
 
 			<br><button onclick="addHtmlTableRow();">Add</button></br>
-			<br><button onclick="editHtmlTableSelectedRow();">Edit</button></br>
-			<br><button onclick= "removeSelectedRow();">Remove</button></br>
+			<button onclick="editHtmlTableSelectedRow();">Edit</button>
+			<button onclick= "removeSelectedRow();">Remove</button>
 	</div>
 
 	<script>
