--- a/user-sign-up-signin-page.html
+++ b/user-sign-up-signin-page.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<meta charset="utf-8">
 <title>Login and  Registration  form</title>
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -7,19 +8,18 @@
 	<div class="login-page">
 	<div class="form">
 		<form class="register-form">
-			<input type="text" placeholder="user name"/>
-			<input type="text" placeholder="password"/>
-			<input type="text" placeholder="email id"/>
-			<button>Create</button>
+			<input type="text" placeholder="user name" id="username" />
+			<input type="text" placeholder="password" id= "password" />
+			<input type="text" placeholder="email id" id="email" />
+			<button onclick="createUser()">Create</button>
 			<p class="message">Already Registered? <a href="#">Login</a> </p>
 
 		</form class="login-form">
-
 		<form>
-			<center><font color='#4CAF50'><h2>My Diary<h2></font></center>
-			<input type="text" placeholder="username" name="username" />
-			<input type="password" placeholder="password" name="password" />
-			<button onclick="check(this.form)">Log in</button>
+			<h3>MY DIARY [ <i><font color="#4CAF50">Login</font></i> ]</h3>
+			<input type="text" placeholder="username" id="name" />
+			<input type="password" placeholder="password" id="pass" />
+			<button onclick="login()">Log in</button>
 			<p class="message">Not Registered? <a href="#">Register</a> </p>
 		</form>
 	</div>	
@@ -37,15 +37,48 @@
 	<script language="javascript">
 	function  check(form)
 	{
-		if (form.username.value== "Mwakughu" && form.password.value == "Peter") 
+		if (form.username.value== ("peter") && form.password.value == "pass") 
 		{
-			window.open("MainPage.html")
+			window.open("create-main-page.html")
 		}
 		else
 		{
 			alert("Username/password is incorrect")
 		}
 	}
+
+	</script>
+
+	<script type="text/javascript">
+		function createUser()
+		{
+			if (window.user === undefined)
+			{
+				window.user = [];
+			}
+
+			var username = document.getElementById('username').value;
+			var password = document.getElementById('password').value;
+			var email = document.getElementById('email').value;
+			window.user.push([username, password, email]);
+			alert("New user has been created");
+
+
+		}
+		//login button function
+		function login()
+		{
+			var userName = document.getElementById('name').value;
+			var passWord = document.getElementById('pass').value;
+			var email = document.getElementById('name').value;
+
+			if (userName == window.user[0][0] && passWord == window.user[0][1] || email == window.user[0][2] && passWord == window.user[0][1]) {
+				window.open("MainPage.html","_self");
+			}else{
+				alert("Username/password is incorrect");
+			}
+		}
+
 	</script>
 </body>
 </html>
